change build path in AWS CodeBuild

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ phases:
   install:
     commands:
       - echo Install Phase
-      - pip install -t ./target/ -r requirements.txt
-      - cp -r $TARGET_DIRECTORY ./target/
+      - pip install -t ./target/ -r app/functions/$TARGET_DIRECTORY/requirements.txt
+      - cp -r app/functions/$TARGET_DIRECTORY/ ./target/
   pre_build:
     commands:
       - echo Pre-build Phase
