--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo  Build Phase
-  post-build:
+  post_build:
     commands:
       - echo  Post-build Phase
 artifacts:
